@@ -3,7 +3,7 @@ SDL_CFLAGS   := `sdl2-config --cflags`
 SDL_LIBS     := `sdl2-config --libs`
 
 MODPLUG_LIBS := -lmodplug
-TREMOR_LIBS  := -lvorbisidec -logg
+TREMOR_LIBS  := #-lvorbisidec -logg
 ZLIB_LIBS    := -lz
 
 CXXFLAGS += -Wall -Wpedantic -MMD $(SDL_CFLAGS) -DUSE_MODPLUG -DUSE_STATIC_SCALER -DUSE_STB_VORBIS -DUSE_ZLIB
