@@ -70,13 +70,17 @@ struct OggDecoder_impl {
 		}
 	}
 
-	bool load(VorbisFile *f, int mixerSampleRate) {
+	bool load(const char *name, FileSystem *fs, int mixerSampleRate) {
+		if (!_f.open(name, "rb", fs)) {
+			return false;
+		}
+		_f.offset = 0;
 		ov_callbacks ovcb;
 		ovcb.read_func  = VorbisFile::readHelper;
 		ovcb.seek_func  = VorbisFile::seekHelper;
 		ovcb.close_func = VorbisFile::closeHelper;
 		ovcb.tell_func  = VorbisFile::tellHelper;
-		if (ov_open_callbacks(f, &_ovf, 0, 0, ovcb) < 0) {
+		if (ov_open_callbacks(&_f, &_ovf, 0, 0, ovcb) < 0) {
 			warning("Invalid .ogg file");
 			return false;
 		}
@@ -134,6 +138,7 @@ struct OggDecoder_impl {
 		return count;
 	}
 
+	VorbisFile _f;
 	OggVorbis_File _ovf;
 	int _channels;
 	bool _open;
@@ -143,30 +148,23 @@ struct OggDecoder_impl {
 #endif
 
 #ifdef USE_STB_VORBIS
-static void mixSample(int16_t &dst, int sample, int volume) {
-	int pcm = dst + ((sample * volume) >> 8);
-	if (pcm < -32768) {
-		pcm = -32768;
-	} else if (pcm > 32767) {
-		pcm = 32767;
-	}
-	dst = (int16_t)pcm;
-}
+static const int kMusicVolume = 192;
 
-static int _musicVolume = 192;
-
-struct MixerChannel_StbVorbis {
-	MixerChannel_StbVorbis()
-		: _v(0), _f(0) {
+struct OggDecoder_impl {
+	OggDecoder_impl()
+		: _v(0) {
 	}
-	~MixerChannel_StbVorbis() {
+	~OggDecoder_impl() {
 		if (_v) {
 			stb_vorbis_close(_v);
 			_v = 0;
 		}
 	}
-	bool load(File *f, int mixerSampleRate) {
-		_count = f->read(_buffer, sizeof(_buffer));
+	bool load(const char *name, FileSystem *fs, int mixerSampleRate) {
+		if (!_f.open(name, "rb", fs)) {
+			return false;
+		}
+		_count = _f.read(_buffer, sizeof(_buffer));
 		if (_count > 0) {
 			int bytes = 0;
 			int error = 0;
@@ -174,11 +172,10 @@ struct MixerChannel_StbVorbis {
 			if (_v) {
 				_offset = bytes;
 				stb_vorbis_info info = stb_vorbis_get_info(_v);
-				if (info.channels != 2 || info.sample_rate != mixerSampleRate) {
+				if (info.channels != 2 || (int)info.sample_rate != mixerSampleRate) {
 					warning("Unhandled ogg/pcm format ch %d rate %d", info.channels, info.sample_rate);
 					return false;
 				}
-				_f = f;
 				_decodedSamplesLen = 0;
 				return true;
 			}
@@ -190,7 +187,9 @@ struct MixerChannel_StbVorbis {
 		if (_decodedSamplesLen != 0) {
 			const int len = MIN(_decodedSamplesLen, samples);
 			for (int i = 0; i < len; ++i) {
-				mixSample(*dst++, (_decodedSamples[0][i] + _decodedSamples[1][i]) / 2, _musicVolume);
+				const int sample = (_decodedSamples[0][i] + _decodedSamples[1][i]) / 2;
+				*dst = ADDC_S16(*dst, ((sample * kMusicVolume) >> 8));
+				++dst;
 			}
 			total += len;
 			_decodedSamplesLen -= len;
@@ -208,14 +207,14 @@ struct MixerChannel_StbVorbis {
 					_offset = 0;
 				}
 				_count = sizeof(_buffer) - _offset;
-				bytes = _f->read(_buffer + _offset, _count);
+				bytes = _f.read(_buffer + _offset, _count);
 				if (bytes < 0) {
 					break;
 				}
 				if (bytes == 0) {
 					// rewind
-					_f->seek(0);
-					_count = _f->read(_buffer, sizeof(_buffer));
+					_f.seek(0);
+					_count = _f.read(_buffer, sizeof(_buffer));
 					stb_vorbis_flush_pushdata(_v);
 				} else {
 					_count = _offset + bytes;
@@ -230,7 +229,9 @@ struct MixerChannel_StbVorbis {
 				for (int i = 0; i < len; ++i) {
 					const int l = int(outputs[0][i] * 32768 + .5);
 					const int r = int(outputs[1][i] * 32768 + .5);
-					mixSample(*dst++, (l + r) / 2, _musicVolume);
+					const int sample = (l + r) / 2;
+					*dst = ADDC_S16(*dst, ((sample * kMusicVolume) >> 8));
+					++dst;
 				}
 				if (count > remain) {
 					_decodedSamplesLen = count - remain;
@@ -255,110 +256,54 @@ struct MixerChannel_StbVorbis {
 	int _decodedSamplesLen;
 	uint32_t _offset, _count;
 	stb_vorbis *_v;
-	File *_f;
+	File _f;
 };
-
-static MixerChannel_StbVorbis *channel;
 #endif
 
 OggPlayer::OggPlayer(Mixer *mixer, FileSystem *fs)
-	: _mix(mixer), _fs(fs), _impl(0) {
+	: _mix(mixer), _fs(fs) {
+	_impl = new OggDecoder_impl;
 }
 
 OggPlayer::~OggPlayer() {
-#ifdef USE_TREMOR
 	delete _impl;
-#endif
-#ifdef USE_STB_VORBIS
-	delete channel;
-	channel = 0;
-#endif
+	_impl = 0;
 }
 
 bool OggPlayer::playTrack(int num) {
-#ifdef USE_TREMOR
 	stopTrack();
 	char buf[16];
 	snprintf(buf, sizeof(buf), "track%02d.ogg", num);
-	VorbisFile *vf = new VorbisFile;
-	if (vf->open(buf, "rb", _fs)) {
-		vf->offset = 0;
-		_impl = new OggDecoder_impl();
-		if (_impl->load(vf, _mix->getSampleRate())) {
-			debug(DBG_INFO, "Playing '%s'", buf);
-			_mix->setPremixHook(mixCallback, this);
-			return true;
-		}
+	if (_impl->load(buf, _fs, _mix->getSampleRate())) {
+		debug(DBG_INFO, "Playing '%s'", buf);
+		_mix->setPremixHook(mixCallback, this);
+		return true;
 	}
-	delete vf;
-#endif
-#ifdef USE_STB_VORBIS
-	stopTrack();
-	char buf[16];
-	snprintf(buf, sizeof(buf), "track%02d.ogg", num);
-	File *file = new File;
-	if (file->open(buf, "rb", _fs)) {
-		channel = new MixerChannel_StbVorbis;
-		if (channel->load(file, _mix->getSampleRate())) {
-			debug(DBG_INFO, "Playing '%s'", buf);
-			_mix->setPremixHook(mixCallback, this);
-			return true;
-		}
-	}
-#endif
 	return false;
 }
 
 void OggPlayer::stopTrack() {
-#ifdef USE_TREMOR
-	_mix->setPremixHook(0, 0);
-	delete _impl;
-	_impl = 0;
-#endif
-#ifdef USE_STB_VORBIS
-	_mix->setPremixHook(0, 0);
-	delete channel;
-	channel = 0;
-#endif
+	if (_impl) {
+		_mix->setPremixHook(0, 0);
+	}
 }
 
 void OggPlayer::pauseTrack() {
-#ifdef USE_TREMOR
 	if (_impl) {
 		_mix->setPremixHook(0, 0);
 	}
-#endif
-#ifdef USE_STB_VORBIS
-	if (channel) {
-		_mix->setPremixHook(0, 0);
-	}
-#endif
 }
 
 void OggPlayer::resumeTrack() {
-#ifdef USE_TREMOR
 	if (_impl) {
 		_mix->setPremixHook(mixCallback, this);
 	}
-#endif
-#ifdef USE_STB_VORBIS
-	if (channel) {
-		_mix->setPremixHook(mixCallback, this);
-	}
-#endif
 }
 
 bool OggPlayer::mix(int16_t *buf, int len) {
-#ifdef USE_TREMOR
 	if (_impl) {
 		return _impl->read(buf, len) != 0;
 	}
-#endif
-#ifdef USE_STB_VORBIS
-	if (channel) {
-		return channel->read(buf, len) != 0;
-	}
-#endif
 	return false;
 }
 
