@@ -1,5 +1,7 @@
 * release 0.4.9
 	- added option to match original inventory items order
+	- added Sega CD tracks playback based on stb_vorbis (OGG 22khz)
+	- fixed piege opcode 0x57
 	- fixed repeating sounds volume
 
 * release 0.4.8
